--- a/public/stylesheets/sass/frontend/_base.sass
+++ b/public/stylesheets/sass/frontend/_base.sass
@@ -2,11 +2,10 @@ body
   background: #eee
 
 #content
-  background: white
-  width: 980px
-  margin: 50px auto 0
-  border: #4f0b03 solid 10px
+  width: 800px
+  margin: 50px auto 0 
   overflow: auto
-  .map
-    border: blue 2px solid
-    margin: 0 0 50px 0
+  img
+    margin: 0 auto
+  p
+    text-align: center
