--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,4 +1,2 @@
-= image_tag('raugstad_inc_logo.png')
-%p 
-  Coming Soon - Contact us at: 847-722-5626 - 
-  %span= mail_to "kevin@raugstadinc.com", "Email Us"
+.slideshow
+  = image_tag('slideshow/1.jpg')
