--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,2 +1,7 @@
-.slideshow
-  = image_tag('slideshow/1.jpg')
+#slideshow
+  = image_tag('slideshow/1.jpg', :class => "active")
+  = image_tag('slideshow/2.jpg')
+  = image_tag('slideshow/3.jpg')
+  = image_tag('slideshow/4.jpg')
+  = image_tag('slideshow/5.jpg')
+
