--- a/public/stylesheets/frontend/all.css
+++ b/public/stylesheets/frontend/all.css
@@ -1,56 +1,3 @@
-body {
-  background: #eeeeee;
-  font: 12px/18px "Lucida Grande", "Lucida Sans Unicode", Arial, Verdana, sans-serif; }
-
-a {
-  color: #333333;
-  text-decoration: none; }
-  a:hover {
-    color: #4f0b03; }
-
-#container {
-  background: white;
-  width: 980px;
-  margin: 0 auto 0;
-  overflow: auto; }
-
-#header .logo {
-  margin: 10px 0 0 40px; }
-#header #menu {
-  float: right;
-  margin: 65px 40px 0 0; }
-  #header #menu li {
-    padding: 0;
-    display: inline; }
-  #header #menu a {
-    font-size: 14px;
-    color: #333333;
-    padding: 10px; }
-    #header #menu a:hover {
-      background: #eeeeee;
-      border-radius: 15px;
-      -moz-border-radius: 15px; }
-  #header #menu a.active {
-    background: #4f0b03;
-    color: white;
-    border-radius: 15px;
-    -moz-border-radius: 15px; }
-
-#content .slideshow {
-  width: 900px;
-  margin: 20px auto; }
-
-#footer {
-  width: 980px;
-  border-top: #4f0b03 solid 5px;
-  margin: 0 auto 50px; }
-  #footer ul {
-    float: right;
-    margin: 10px 0 0; }
-  #footer li {
-    padding: 0 0 0 15px;
-    display: inline; }
-
 * {
   margin: 0;
   padding: 0; }
@@ -110,3 +57,71 @@ input, button, textarea, select, optgroup, option {
 /*@branch For IE6-Win, IE7-Win */
 input, button, textarea, select {
   *font-size: 100%; }
+
+body {
+  background: #eeeeee;
+  font: 12px/18px "Lucida Grande", "Lucida Sans Unicode", Arial, Verdana, sans-serif; }
+
+a {
+  color: #333333;
+  text-decoration: none; }
+  a:hover {
+    color: #4f0b03; }
+
+#container {
+  background: white;
+  width: 980px;
+  margin: 0 auto 0;
+  overflow: auto; }
+
+#header .logo {
+  margin: 10px 0 0 40px; }
+#header #menu {
+  float: right;
+  margin: 65px 40px 0 0; }
+  #header #menu li {
+    padding: 0;
+    display: inline; }
+  #header #menu a {
+    font-size: 14px;
+    color: #333333;
+    padding: 10px; }
+    #header #menu a:hover {
+      background: #eeeeee;
+      border-radius: 15px;
+      -moz-border-radius: 15px; }
+  #header #menu a.active {
+    background: #4f0b03;
+    color: white;
+    border-radius: 15px;
+    -moz-border-radius: 15px; }
+
+#content {
+  margin: 20px; }
+  #content #slideshow {
+    width: 900px;
+    height: 600px;
+    margin: 0 auto 50px;
+    position: relative; }
+    #content #slideshow img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 8;
+      opacity: 0; }
+    #content #slideshow img.active {
+      z-index: 10;
+      opacity: 1; }
+    #content #slideshow img.last-active {
+      z-index: 9; }
+
+#footer {
+  width: 980px;
+  border-top: #4f0b03 solid 5px;
+  margin: 0 auto 50px; }
+  #footer ul {
+    float: right;
+    margin: 10px 0 0; }
+  #footer li {
+    padding: 0 0 0 15px;
+    display: inline; }
