--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,7 @@
     = stylesheet_link_tag 'frontend/all'
     = javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"
     = javascript_include_tag "application", "slider"
+    = csrf_meta_tag
   %body
     #container
       #header
@@ -18,9 +19,9 @@
           %ul
             %li= link_to "Home", root_path, :class => is_active?("home")
             %li= link_to "About Us", about_path, :class => is_active?("about")
-            %li= link_to "Meet the Builders", "#"
+            %li= link_to "Meet the Builders", meet_the_builders_path, :class => is_active?("meet_the_builders")
             %li= link_to "Gallery", "#"
-            %li= link_to "Testimonials", "#"
+            %li= link_to "Testimonials", testimonials_path, :class => is_active?("testimonials")
             %li= link_to "Contact Us", "#"
       #content
         = yield
