--- a/app/views/admin/testimonials/_form.html.haml
+++ b/app/views/admin/testimonials/_form.html.haml
@@ -1,15 +1,16 @@
-= f.error_messages
-%p
-  = f.label :from
-  %br
-  = f.text_field :from
-%p
-  = f.label :quote
-  %br
-  = f.text_field :quote
-%p
-  = f.label :date
-  %br
-  = f.datetime_select :date
-%p
-  = f.submit
+= form_for [:admin, @testimonial] do |f|
+  = f.error_messages
+  %p
+    = f.label :from
+    %br
+    = f.text_field :from
+  %p
+    = f.label :quote
+    %br
+    = f.text_field :quote
+  %p
+    = f.label :date
+    %br
+    = f.datetime_select :date
+  %p
+    = f.submit
