--- a/app/views/admin/testimonials/new.html.haml
+++ b/app/views/admin/testimonials/new.html.haml
@@ -1,21 +1,6 @@
 - title "New Testimonial"
 
-- form_for [:admin, @testimonial] do |f|
-  = f.error_messages
-  %p
-    = f.label :from
-    %br
-    = f.text_field :from
-  %p
-    = f.label :quote
-    %br
-    = f.text_field :quote
-  %p
-    = f.label :date
-    %br
-    = f.datetime_select :date
-  %p
-    = f.submit
+= render 'form'
 
 %p
   = link_to "Back to List", admin_testimonials_path
