--- a/public/stylesheets/sass/frontend/_base.sass
+++ b/public/stylesheets/sass/frontend/_base.sass
@@ -1,5 +1,5 @@
 body
-  background: #eee
+  background: #d1c1a7
   font: 12px/18px "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif
 
 a
