--- a/public/stylesheets/frontend/all.css
+++ b/public/stylesheets/frontend/all.css
@@ -59,7 +59,7 @@ input, button, textarea, select {
   *font-size: 100%; }
 
 body {
-  background: #eeeeee;
+  background: #d1c1a7;
   font: 12px/18px "Lucida Grande", "Lucida Sans Unicode", Arial, Verdana, sans-serif; }
 
 a {
