fixing bugs and formating testimonials

--- a/public/stylesheets/sass/frontend/_base.sass
+++ b/public/stylesheets/sass/frontend/_base.sass
@@ -1,76 +1,51 @@
-body
-  background: #d1c1a7
-  font: 12px/18px "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif
+h1
+  font-size: 138.5%
 
-a
-  color: #333
-  text-decoration: none
-  &:hover
-    color: #4f0b03
+h2
+  font-size: 123.1%
 
-#container
-  background: white
-  width: 980px
-  margin: 0 auto 0
-  overflow: auto
+h3
+  font-size: 108%
 
-#header
-  clear: both
-  height: 80px
-  border-top: 5px solid #4F0B02
-  .logo
-    float: right
-    margin: 0 40px 0 0
-  #menu
-    float: left
-    margin: 30px 0 0 40px
-    li
-      padding: 0
-      display: inline
-    a
-      font-size: 14px
-      color: #333
-      padding: 10px 12px
-      &:hover
-        background: #eee
-        border-radius: 15px
-        -moz-border-radius: 15px
-    a.active
-      background: #4f0b03
-      color: white
-      border-radius: 15px
-      -moz-border-radius: 15px
-    
-#content
-  margin: 20px
-  #slideshow
-    width: 900px
-    height: 600px
-    margin: 0 auto 50px
-    position: relative
-    img
-      position: absolute
-      top: 0
-      left: 0
-      z-index: 8
-      opacity: 0.0
-    img.active
-      z-index: 10
-      opacity: 1.0
-    img.last-active
-      z-index: 9
-    
-#footer
-  width: 980px
-  background: url(../../images/footer.png)
-  height: 100px
-  margin: 0 auto 50px
-  color: white
-  ul
-    float: right
-    margin: 10px 0 0
-  li
-    padding: 0 0 0 15px
-    display: inline
-  
-  
+h1, h2, h3
+  margin: 1em 0
+
+h1, h2, h3, h4, h5, h6, strong
+  font-weight: bold
+
+abbr, acronym
+  border-bottom: 1px dotted #000
+  cursor: help
+
+em
+  font-style: italic
+
+blockquote, ul, ol, dl
+  margin: 1em
+
+ol, ul, dl
+  margin-left: 2em
+
+ol li
+  list-style: decimal outside
+
+ul li
+  list-style: disc outside
+
+dl dd
+  margin-left: 1em
+
+th, td
+  border: 1px solid #000
+  padding: .5em
+
+th
+  font-weight: bold
+  text-align: center
+
+caption
+  margin-bottom: .5em
+  text-align: center
+
+p, fieldset, table
+  margin-bottom: 1em
