--- a/app/views/admin/testimonials/index.html.haml
+++ b/app/views/admin/testimonials/index.html.haml
@@ -3,13 +3,11 @@
 %table
   %tr
     %th From
-    %th Quote
     %th Date
   - for testimonial in @testimonials
     %tr
       %td= testimonial.from
-      %td= testimonial.quote
-      %td= testimonial.date
+      %td= testimonial.date.strftime("%b %d, %Y")
       %td= link_to "Edit", edit_admin_testimonial_path(testimonial)
       %td= link_to "Remove", admin_testimonial_path(testimonial), :confirm => 'Are you sure?', :method => :delete
 
