--- a/app/views/admin/builders/_form.html.haml
+++ b/app/views/admin/builders/_form.html.haml
@@ -5,12 +5,12 @@
     %br
     = f.text_field :name
   %p
-    = f.label :bio
-    %br
-    = f.text_field :bio
-  %p
     = f.label :email
     %br
     = f.text_field :email
+  %p
+    = f.label :bio
+    %br
+    = f.text_area :bio
   %p
     = f.submit
