--- a/app/views/testimonials/index.html.haml
+++ b/app/views/testimonials/index.html.haml
@@ -6,4 +6,4 @@
     %br
     %strong= testimonial.from
     %br
-    %strong= testimonial.date.strftime("%b %d, %Y")
+    %strong= testimonial.date.strftime("%b %Y")
