--- a/public/stylesheets/frontend/all.css
+++ b/public/stylesheets/frontend/all.css
@@ -135,7 +135,7 @@ a {
     margin: 0 40px 0 0; }
   #header #menu {
     float: left;
-    margin: 30px 0 0 40px; }
+    margin: 20px 0 0 0; }
     #header #menu li {
       padding: 0;
       display: inline; }
