--- a/public/stylesheets/sass/frontend/_main.sass
+++ b/public/stylesheets/sass/frontend/_main.sass
@@ -23,7 +23,7 @@ a
     margin: 0 40px 0 0
   #menu
     float: left
-    margin: 30px 0 0 40px
+    margin: 20px 0 0 0
     li
       padding: 0
       display: inline
