--- a/public/stylesheets/sass/frontend/_main.sass
+++ b/public/stylesheets/sass/frontend/_main.sass
@@ -23,7 +23,10 @@ a
     margin: 0 40px 0 0
   #menu
     float: left
-    margin: 20px 0 0 0
+    margin: 30px 0 0 20px
+    ul
+      margin: 0
+      padding: 0
     li
       padding: 0
       display: inline
